modifications in language and in removal of the example for now

--- a/emergent_design.tex
+++ b/emergent_design.tex
@@ -29,7 +29,8 @@
     \input{abstract}
     \input{introduction}
     \input{description}
-    \input{case}
+%    \input{case} don't honestly know if I should include that. Definitely
+%    deserves a cleaning 
     \input{conclusion}
 
     \bibliographystyle{plainnat}
