--- a/introduction.tex
+++ b/introduction.tex
@@ -10,7 +10,7 @@ the system, and affects how the system evolves and relates to its members and
 environment. Both concepts are intertwined, as will be shown below. 
 
 \subsection{Constructionism}
-Constructionism is a epistemological theory that was developed by Seymour
+Constructionism is an epistemological theory that was developed by Seymour
 Papert, drawing from his experiences as a mathematician, his time studying with
 Jean Piaget (the developer of the constructivist theory) in France and from his
 background as an artificial intelligence and media researcher.
@@ -101,7 +101,7 @@ emergent approach.
 So the point of the strategy is to build systems that provide a base for systems
 to be built on it, by the users of the system itself. A global participatory architecture
 that connects several systems that grew on top of it. That view has several
-advantages as xxx objectives for workshops in his emergent design system in
+advantages as \cite{education:cavallo__technological_fluency} objectives for workshops in his emergent design system in
 Thailand shows:
 
 \begin{quote}
@@ -174,18 +174,18 @@ the aim of projects like the OLPC is:
     \cite{education:olpc_educational_proposition}
 \end{quote}
 
-What can we say about the next educational step of for those children, higher
+What can we say about the next educational step for those children, higher
 education, in this context?
 Certainly a person who grew used to those conditions in their development 
 would find the current state of affairs in university appalling. 
 
-\cite{futurism:kurzweil_singularity_is_near}, in his last best selling futurist
-book tries to make a point about the importance of the exponential pace of
-technological development, and how it will affect the individual and the
-society as a whole on all conceivable aspects on a very close future.  A
-society that does not prepare it's citizens for such future is doomed to become
-mere spectator and follower of those who do. A small account of his view of the
-present educational situation perhaps illustrates the point better:
+\cite{futurism:kurzweil_singularity_is_near}, in his book tries to make a point
+about the importance of the exponential pace of technological development, and
+how it will affect the individual and the society as a whole on all conceivable
+aspects on a very close future.  A society that does not prepare it's citizens
+for such future is doomed to become mere spectator and follower of those who do.
+A small account of his view of the present educational situation perhaps
+illustrates the point better:
 
 \begin{quotation}
     Most education in the world today, including in the wealthier communities,
