new pdf, some changes in introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
 
-Two fundamental concepts form the basis of the educational system this article is trying to
+\textbf{Two fundamental concepts} form the basis of the educational system this article is trying to
 communicate. One is constructionism, a theory developed by Seymour Papert, and
 it is the epistemological approach that runs throughout the system, and affects
 how the learning (and consequently the teaching) process is viewed. The second
