new conclusion, several modifications because I'm sending it to a SBC congress

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,15 +1,18 @@
 \begin{abstract}
-    This paper proposes a model of higher education that uses emergence and
-    constructionism as the guiding design principles and takes the current
-    computational technologies and networks as the technological base to
-    distribute and generate information and knowledge. 
+    Our current society is exponentially increasing its dependency on technology
+    and science, and this dependence is likely to get deeper in the close
+    future. The current educational system is broken even for the needs of past
+    decades, and it is a bad joke to consider it satisfactory for our current
+    and future needs. This leads to a dangerous situation where a society will
+    have a base that very few of its members comprehend.
 
-    It also assumes and tries to make the point that the people of the present
-    and near future will grown up with access to computers and their potential,
-    and will take them for granted.
+    The educational proposal that I outline here leverages current technologies
+    to create the condition where people can have access to top notch knowledge
+    and technologies, so that a more democratic and efficient pedagogical
+    approach can emerge, one that is more encompassing and that allows for much
+    more personal control over the process.
     \\
     \\
-    \textbf{keywords}: education, technology, constructionism, university
+    \textbf{keywords}: education, technology, constructionism, emergent
 \end{abstract}
 
-ç
