--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,60 +1,27 @@
+%    Thus, conclusions should be short and sweet. Do not restate all of your findings. One
+%statement in the abstract, one in the introduction and once more in the body of the text
+%should be enough! You can include a short paragraph or two acknowledging limitations,
+%suggesting implications beyond those in the paper. Keep it short though — don’t write your
+%grant application here outlining all of your plans for future research. And don’t speculate;
+%the reader wants to know your facts not your opinions.
+
+%Conclusion
+%
+%To summarize, I am presenting for computer science an argument that has come up before in many other areas of science and mathematics education. Our official curricula, I think, run the same risk as the official physics curriculum that caused Albert Einstein to drop out of school. Such rigidity would be particularly regrettable in a subject like computer programming, which lends itself so readily to a flexible, experimental approach. 
+%
+%
+
 \section{Conclusion}
 
-The technical conditions for an education that is modeled in the framework detailed in the
-course of this article are already available, and some initial implementations for
-topics such as language acquisition are already available on the market.
-\cite{education:anne_eisenberg_learning_native_speaker} Those could be
-adapted as models to be used in a very large scale for any number of topics.
+Summarizing, I am presenting an argument for an emergent design approach for
+education systems, one that is based on an approach for emergent design detailed
+by \cite{education:cavallo__technological_fluency} and that uses as its
+pedagogical and epistemological base constructionism, as situated in
+\cite{education:papert__situating_constructionism}.
 
-Some of the benefits of learning in this environment were demonstrated in the
-introduction, but to make some more emphasis, we can see some ``key ingredients
-for creating rich design environments'', that
-\cite{education:resnick&ocko_learning_through_design} describe for their
-LEGO/Logo environment for children learning, and that , correlates with the
-system described in this article:
-
-\begin{itemize}
-    \item Put people in control.
-    \item Offer Multiple paths to learning
-    \item Encourage a sense of community
-\end{itemize}
-
-But perhaps even more steep will be the social conditions for developing this
-system, seeing that it is mainly a social machine. Even more if we consider what
-\cite{education:negroponte_speech_ted} has to say about it:
-
-\begin{quote} 
-    If you look at governments around the world, ministries of education tend to be
-    the most conservative, and also the ones that have huge payrolls, everybody
-    thinks they know about education, a lot of culture is built into it as well,
-    it's really hard.
-\end{quote} 
-
-The solution for those situations are completely out of the scope of this
-article, but personal effort and conscious struggle for a better
-education is a sure step on the right direction. Plus, this system provokes the
-emergence of self-reinforcement, in the sense that the more a person is is
-exposed and trusted to control his/her own learning, the more engaged and
-enthusiastic he/she will be about the process. To illustrate this pattern,
-consider \cite{education:wilensky_abstract_meditations_concrete} though: 
-\clearpage%so it don't break the quote
-\begin{quote} 
-    What kinds of relationships between people would be fostered by a society
-    which stipulated that people be introduced to each other formally and
-    thereafter relate only in prescribed, rule-driven ways? If you shudder at
-    this prospect, consider the analogy between this scenario and the
-    instructionist paradigm for learning (see
-    \cite{education:papert&harel_software_design_learning_enviroment}). It is
-    through people's own idiosyncratically personal ways of connecting to other
-    people that meaningful relationships are established. In a similar way, when
-    learners are in an environment in which they construct their own
-    relationships with the objects of knowledge, these relationships can become
-    deeply meaningful and profound.   
-\end{quote}
-
-
-This article ends with the wise
-words of \cite{education:resnick&ocko_learning_through_design} about it:
+This article ends with the words of
+\cite{education:resnick&ocko_learning_through_design} that I find very relevant
+for systems like the one I proposed so far:
 
 \begin{quote} 
     Implementing these strategies is not easy. There are many unanswered
