--- a/description.tex
+++ b/description.tex
@@ -1,4 +1,4 @@
-\section{Description}
+\section{Description of the system}
 
 The overall system has the objective of graduating individuals in a manner that
 is at the same time democratic, stimulating, meritocratic and able to prepare 
@@ -21,36 +21,50 @@ all the non copyrighted material.
 
 That content should be placed in a free and open environment in the internet,
 where it would be available to every citizen that would be interested in it.
+Systems that could be used as base are already in place, and they are already
+being used by global populations, which, shows its demand, as can be seen in
+\cite{albeson2007__ocw}:
+
+\begin{quote}
+    The MIT OpenCourseWare web site has, as hoped, become a significant
+    global educational resource. Fewer than half (43\%) of its visitors
+    originate from within North America, the others coming primarily from
+    East Asia (17\%), Western Europe (14\%), South Asia (7\%), Latin America
+    (5\%), and Eastern Europe (4\%). Access to MIT translation partners is
+    also substantial: in January 2007 there were 75,000 visits to the
+    Universia translations, and a quarter-million visits each to the CORE
+    and OOPS translation sites.
+\end{quote}
+
 This system would be described only superficially here, because ideally it would
 leverage all the modern existing web development techniques in the ``web 2.0''.
 Those techniques would serve to guide the students, to promote socialization in
 the form of forums, tests, iterative games and so on, where the students would
 play not only with the resources available on the system, but with each other
-projects and exercises. That, as Papert puts it, places the fun on the learning
-process:
+projects and exercises. That, as \cite{education:papert_mindstorms} puts it,
+places the fun on the learning process:
 
-\begin{quotation} 
+\begin{quote} 
     Part of the fun is sharing, posting graphics on the walls, modifying and
     experimenting with each other's work, and bringing the ``new'' products back to
     the original inventors. Although the work at the computer is usually private it
     increases the children's desire for interaction. These children want to get
     together with others engaged in similar activities because they have a lot to
     talk about. 
-    \cite{education:papert_mindstorms}
-\end{quotation}
+\end{quote}
 
 This space would, of course, grow in richness with every user increasing the
 opportunities and sharing it's own epistemological experiences, not only in some
 particular subjects, which of course would take place, but of the medium itself,
 smoothing the learning curve with each generation of users and producing a more
-fitted social intelligence in the process, like Papert again makes clear:
+fitted social intelligence in the process, like \cite{education:papert_mindstorms}
+again makes clear:
 
-\begin{quotation}
+\begin{quote}
     As with writing, so with music-making, games of skill, complex graphics,
     whatever: The computer is not a culture unto itself but it can serve to
     advance very different cultural and philosophical outlooks.
-    \cite{education:papert_mindstorms}
-\end{quotation}
+\end{quote}
 
 Of course, one does not expect the users would be the only responsibles for the
 system. The hired professors of the competent authorities should be available
@@ -97,7 +111,7 @@ indeed be the same as a normal vestibular.
 
 The model so far would be incomplete on our day and age, mostly because of the
 limitations of the digital distribution model. That will probably change if we
-follow Kurzweil ideas:
+follow \cite{futurism:kurzweil_singularity_is_near} ideas:
 
 \begin{quotation}
     Because of current bandwidth limitations and the lack of effective
@@ -116,7 +130,6 @@ follow Kurzweil ideas:
     classrooms will be ubiquitous and affordable even in third world countries.
     Students at any age, from toddlers to adults, will be able to access the
     best education in the world at any time and from any place.
-    \cite{futurism:kurzweil_singularity_is_near} 
 \end{quotation}
 
 But what could be done today to reproduce the physical training and
