--- a/emergent_design.tex
+++ b/emergent_design.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper, 12pt]{article}
 
+
+\usepackage{sbc-template}
 %better bibliography style control
 \usepackage{natbib}
 
@@ -22,13 +24,31 @@
 
 \title{An emergent participatory design framework for higher education}
 
-\author{Eduardo Bellani}
+%\author{Eduardo Bellani \thanks{\htmladdnormallink{ebellani@gmail.com}
+%                                                  {mailto:ebellani@gmail.com}} } 
+
+\address{
+%  Instituto de Informática -- Universidade Federal do Rio Grande do Sul
+%  (UFRGS)\\
+%  Caixa Postal 15.064 -- 91.501-970 -- Porto Alegre -- RS -- Brazil
+%\nextinstitute
+%  Department of Computer Science -- University of Durham\\
+%  Durham, U.K.
+%\nextinstitute
+%  Departamento de Sistemas e Computação\\
+%  Universidade Regional de Blumenal (FURB) -- Blumenau, SC -- Brazil
+%  \email{\{nedel,flavio\}@inf.ufrgs.br, R.Bordini@durham.ac.uk,
+%  jomi@inf.furb.br}
+}
+
 
 \begin{document} 
     \maketitle
     \input{abstract}
     \input{introduction}
-    \input{description}
+        %the main work
+        \input{the_bases}
+        \input{description}
 %    \input{case} don't honestly know if I should include that. Definitely
 %    deserves a cleaning 
     \input{conclusion}
