--- a/introduction.tex
+++ b/introduction.tex
@@ -1,191 +1,32 @@
 \section{Introduction}
 
-
-\textbf{Two fundamental concepts} form the basis of the educational system this article is trying to
-communicate. One is constructionism, a theory developed by Seymour Papert, and
-it is the epistemological approach that runs throughout the system, and affects
-how the learning (and consequently the teaching) process is viewed. The second
-one is emergent design, and that is the organizational and structural view of
-the system, and affects how the system evolves and relates to its members and
-environment. Both concepts are intertwined, as will be shown below. 
-
-\subsection{Constructionism}
-Constructionism is an epistemological theory that was developed by Seymour
-Papert, drawing from his experiences as a mathematician, his time studying with
-Jean Piaget (the developer of the constructivist theory) in France and from his
-background as an artificial intelligence and media researcher.
-
-\cite{education:cavallo_building_knowledge} makes a clear distinction between Constructionism and
-Constructivism:
-
-\begin{quote}
-  Constructionism builds upon principles in constructivism. While constructivism
-  holds that the learner constructs new knowledge based on the existing knowledge
-  he or she has, constructionism builds on this idea by maintaining that this
-  process happens particularly well when the learner is in the process of
-  constructing something.                   
-  
-\end{quote}
-
-Constructionism is also a true pedagogy of autonomy, in a very Freirean way:
-\begin{quote}
-...teaching is not transferring knowledge, but creating opportunities for their own
-production or its construction.
-\cite{education:paulo_freire__pedagogia_da_autonomia}
-\end{quote}
-
-We can observe the deep connection of constructionism with computers and
-technology. But that is far from a technocentrist, where technology is used just
-for the sake of using technology. That connection comes from the almost endless
-capacity of the computer to create simulations and concept of microworlds:
+The fundamental problem that I tackle in this article is putted by \cite{sagan_1996__candle_in_dark}  
+very eloquently, so I'll quote him in full:
 
 \begin{quotation}
-Learners in a physics microworld are able to invent their own personal sets of
-assumptions about the microworld and its laws and are able to make them come
-true.  They can shape the reality in which they will work for the day, they can
-modify it and build alternatives.  This is an effective way to learn,
-paralleling the way in which each of us once did some of our most effective
-learning. Piaget has demonstrated that children learn fundamental mathematical
-ideas by first building their own, very much different (for example,
-preconservationist) mathematics. And children learn language by first learning
-their own ("baby-talk") dialects. So, when we think of microworlds as incubators
-for powerful ideas, we are trying to draw upon this effective strategy: We allow
-learners to learn the "official" physics by allowing them the freedom to invent
-many that will work in as many invented worlds.
-\cite{education:papert_mindstorms}
+    We've arranged a global civilization in which most crucial elements -
+    transportation, communications, and all other industries; agriculture,
+    medicine, education, entertainment, protecting the environment; and even
+    the key democratic institution of voting - profoundly depend on science and
+    technology. We have also arranged things so that almost no one understands
+    science and technology. This is a prescription for disaster. We might get
+    away with it for a while, but sooner or later this combustible mixture of
+    ignorance and power is going to blow up in our faces.
 \end{quotation}
 
-That kind of characteristic is crucial to deeper changes in education and what
-is meant by knowing. 
-
-\begin{quotation}
-The need to distinguish between a first impact on education and a deeper meaning
-is as real in the case of computation as in the case of feminism. For example,
-one is looking at a clear case of first impact when "computer literacy" is
-conceptualized as adding new content material to a traditional curriculum.
-Computer-aided instruction may seem to refer to method rather than content, but
-what counts as a change in method depends on what one sees as the essential
-features of the existing methods. From my perspective, CAI amplifies the rote
-and authoritarian character that many critics see as manifestations of what is
-most characteristic of--and most wrong with--traditional school. Computer
-literacy and CAI, or indeed the use of word-processors, could conceivably set up
-waves that will change school, but in themselves they constitute very local
-innovations--fairly described as placing computers in a possibly improved but
-essentially unchanged school. The presence of computers begins to go beyond
-first impact when it alters the nature of the learning process; for example, if
-it shifts the balance between transfer of knowledge to students (whether via
-book, teacher, or tutorial program is essentially irrelevant) and the production
-of knowledge by students. It will have really gone beyond it if computers play a
-part in mediating a change in the criteria that govern what \emph{kinds of knowledge
-are valued in education.} 
-\cite{education:papert__situating_constructionism}
-\end{quotation}
-
-
-\subsection{Emergent Design}
-
-Emergent design is a strategy for building systems that are too complex to be
-tackled in a top down, plan first manner, as
-\cite{education:cavallo__technological_fluency} puts is:
-\begin{quotation}
-Popular views about design, about reform, about planning, about control
-typically lag behind progress. New organizations are pioneering new means of
-control and change.  Emergent design is the recognition that certain systems are
-too complex, dynamic, interconnected, and chaotic to attempt to manage them by
-top-down, pre-planned, rigid means of control. Large educational systems are
-one-such system. The human brain is another.  That this project is
-simultaneously involved with both systems is all the more reason to take an
-emergent approach.
-\end{quotation}
-
-So the point of the strategy is to build systems that provide a base for systems
-to be built on it, by the users of the system itself. A global participatory architecture
-that connects several systems that grew on top of it. That view has several
-advantages as \cite{education:cavallo__technological_fluency} objectives for workshops in his emergent design system in
-Thailand shows:
+or consider the synthesis that \cite{education:cavallo__models_of_growth} makes
+about the prophetic vision of John Dewey on justice and society:
 
 \begin{quote}
-  The workshops were intended to:
-  \begin{itemize}
-
- \item provide powerful personal
-experiences of a different approach to learning,
-
- \item break pessimistic mindsets about people’s ability to learn,
-
- \item surface, reflect upon and discuss participants’ own prior explicit and
- implicit assumptions about learning to the surface, and compare them to the new
- experience,
-
- \item encourage participants to think about the learning process itself,
-
- \item engage in thinking about the design and practice of learning environments
- in the local context,
-
- \item identify local people whose thinking and acting appear promising so that
- they can take on greater roles for change,
-
- \item debug our own thinking about the mechanisms of learning and our own
- pattern of practice in designing learning environments.  
-
- \end{itemize}
+    For Dewey a just society could only be built not based upon the dictates of
+    clergy, royalty, or an elite, but depended upon the informed collective
+    decisions of all, where every voice should be heard.
 \end{quote}
 
-\subsection{Why}
-
-But why propose of a new system for higher education, one that puts the learner
-in the driver seat, that can growth organically with a community and is deeply
-connected to what is important for an individual and his community? Because I see that the act of
-descholling society, in the sense of individuals empowering themselves, is
-critical for the current and future society that wishes to remain democratic.
-
-\cite{education:cavallo__models_of_growth} quotes John Dewey on exactly this fact:
-\begin{quote}
-For Dewey a just society could only be built not based upon the dictates of
-clergy, royalty, or an elite, but depended upon the informed collective
-decisions of all, where every voice should be heard.
-\end{quote}
-
-But what descholling means, and to who falls the responsibility for deschooling
-an individual? \cite{education:ivan_illich__deschooling_society} provides a
-clear answer to both questions.
-
-\begin{quotation}
-  Only liberating oneself from school will dispel such illusions. The discovery
-  that most learning requires no teaching can be neither manipulated nor planned.
-  Each of us is personally responsible for his or her own deschooling, and only we
-  have the power to do it. No one can be excused if he fails to liberate himself
-  from schooling. People could not free themselves from the Crown until at least
-  some of them had freed themselves from the established Church. They cannot free
-  themselves from progressive consumption until they free themselves from
-  obligatory school.
-\end{quotation}
-
-So if we analyze that the current and next generations of children, poor and rich alike, are
-growing along with computers and their powerful integration capabilities, and
-the aim of projects like the OLPC is: 
-
-\begin{quote}
-    to adequately educate all the children of the
-    emerging world. Simply doing more of the same is no longer enough, if it
-    ever was. If their citizens are to benefit, as they should from the spread
-    of the technology-based, global information economy, these nations must
-    rethink the old top-down classroom paradigm. 
-    \cite{education:olpc_educational_proposition}
-\end{quote}
-
-What can we say about the next educational step for those children, higher
-education, in this context?
-Certainly a person who grew used to those conditions in their development 
-would find the current state of affairs in university appalling. 
-
-\cite{futurism:kurzweil_singularity_is_near}, in his book tries to make a point
-about the importance of the exponential pace of technological development, and
-how it will affect the individual and the society as a whole on all conceivable
-aspects on a very close future.  A society that does not prepare it's citizens
-for such future is doomed to become mere spectator and follower of those who do.
-A small account of his view of the present educational situation perhaps
-illustrates the point better:
+So, clearly our current ways of learning and teaching are broken, but why? I
+stress that this is because of the centralized nature of the responsible
+institutions. It is the nature of centralized process to not being able to cope
+with change. As \cite{futurism:kurzweil_singularity_is_near} puts it:
 
 \begin{quotation}
     Most education in the world today, including in the wealthier communities,
@@ -198,15 +39,51 @@ illustrates the point better:
     divide.
 \end{quotation}
 
-The impact of delaying, however, is not only social, but profoundly individual as well, as
-\cite{education:papert_gaston_vision_for_education} puts it, ``So the choice is
-not whether we will consider deep changes in school but how many children will
-be lost before we recognize that we have to do so'', or in other words on the
-same work:
+Unfortunately compounding this problem is the fact that the bureaucracies
+responsible for the education in most, if not all, societies in the world tend
+to be the most resistant to change, where exists a heavy payroll and people
+think they know everything about education. \cite{education:negroponte_speech_ted}
+
+I'll call the process of decentralizing of the educational systems deschooling,
+paying homage to \cite{education:ivan_illich__deschooling_society}, because I
+think he was one of the first who saw it clearly needed in modern society. 
+
+But what descholling means, and to whom falls the responsibility for deschooling
+an individual? \cite{education:ivan_illich__deschooling_society} provides a
+clear answer to both questions.
+
 \begin{quotation}
+    Only liberating oneself from school will dispel such illusions. The discovery
+    that most learning requires no teaching can be neither manipulated nor planned.
+    Each of us is personally responsible for his or her own deschooling, and only we
+    have the power to do it. No one can be excused if he fails to liberate himself
+    from schooling. People could not free themselves from the Crown until at least
+    some of them had freed themselves from the established Church. They cannot free
+    themselves from progressive consumption until they free themselves from
+    obligatory school.
+\end{quotation}
+
+The impact of keeping the course is huge, both socially and individually, as
+\cite{education:papert_gaston_vision_for_education} thinks: 
+
+\begin{quotation} 
+    The choice is not whether we will consider deep changes in school but how many
+    children will be lost before we recognize that we have to do so.
+\\
+...
+\\
     As the slow evolution of school lags further and further behind the rapid
     evolution of society, increasing numbers of students all over the world see
     school as irrelevant to life. Many drop out. Many more drop out mentally,
     emerging from school with poor skills and negative visions of themselves and the
     society they are entering.
 \end{quotation}
+
+In the rest of the article I'll try to present a system that uses current
+technologies and networks to enable individuals to take charge of their own
+education, along with a path for them to prove their acquired knowledge to society
+in general. It is the objective of the article to make clear that, by providing
+the conditions to a system with the characteristics outlined in the rest of the
+article the problems described in this introduction would be considerably
+mitigated.
+
