--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,36 @@
+@article{ albeson2007__ocw,
+          author = {Hal Abelson},
+          title = {The Creation of OpenCourseWare at MIT},
+          year = {2007},
+          url={http://hdl.handle.net/1721.1/37585},
+}
+
+
+@misc{mit_2005_opencourseware,
+    author = {{massachusetts}},
+    howpublished = {http://ocw.mit.edu/},
+    month = {Last},
+    title = {{MIT OpenCourseWare}},
+    url = {http://ocw.mit.edu/},
+    year = {2006}
+}
+
+	
+@book{  sagan_1996__candle_in_dark,
+	author = {Carl Sagan},
+	isbn = {0-345-40946-9},
+	publisher = {Ballantine Books},
+        year = {1996},
+	title = {The demon-haunted world : science as a candle in the dark},
+}
+
+
 @phdthesis{ education:cavallo__technological_fluency,
- author = {Cavallo, David Paul},
- note = {Supervisor-Papert, Seymour},
- title = {Technological fluency and the art of motorcycle maintenance: emergent design of learning environments (thailand)},
- year = {2000},
- order_no = {AAI0801718},
- publisher = {Massachusetts Institute of Technology},
+    author = {Cavallo, David Paul},
+    note = {Supervisor-Papert, Seymour},
+    title = {Technological fluency and the art of motorcycle maintenance: emergent design of learning environments (thailand)},
+    year = {2000},
+    publisher = {Massachusetts Institute of Technology},
  }
 
 
