fixed the url of deschooling society, and cleaned up the introduction a bit

--- a/introduction.tex
+++ b/introduction.tex
@@ -14,7 +14,7 @@ very eloquently, so I'll quote him in full:
     ignorance and power is going to blow up in our faces.
 \end{quotation}
 
-or consider the synthesis that \cite{education:cavallo__models_of_growth} makes
+Or consider the synthesis that \cite{education:cavallo__models_of_growth} makes
 about the prophetic vision of John Dewey on justice and society:
 
 \begin{quote}
@@ -46,11 +46,9 @@ think they know everything about education. \cite{education:negroponte_speech_te
 
 I'll call the process of decentralizing of the educational systems deschooling,
 paying homage to \cite{education:ivan_illich__deschooling_society}, because I
-think he was one of the first who saw it clearly needed in modern society. 
-
-But what descholling means, and to whom falls the responsibility for deschooling
-an individual? \cite{education:ivan_illich__deschooling_society} provides a
-clear answer to both questions.
+think he was one of the first who saw it clearly needed in modern society.  But
+what descholling means, and to whom falls the responsibility for deschooling an
+individual? The same work provides a clear answer to both questions.
 
 \begin{quotation}
     Only liberating oneself from school will dispel such illusions. The discovery
