--- a/references.bib
+++ b/references.bib
@@ -1,8 +1,8 @@
 @article{ albeson2007__ocw,
-          author = {Hal Abelson},
-          title = {The Creation of OpenCourseWare at MIT},
-          year = {2007},
-          url={http://hdl.handle.net/1721.1/37585},
+    author = {Hal Abelson},
+    title = {The Creation of OpenCourseWare at MIT},
+    year = {2007},
+    url={http://hdl.handle.net/1721.1/37585},
 }
 
 
@@ -17,17 +17,16 @@
 
 	
 @book{  sagan_1996__candle_in_dark,
-	author = {Carl Sagan},
-	isbn = {0-345-40946-9},
-	publisher = {Ballantine Books},
-        year = {1996},
-	title = {The demon-haunted world : science as a candle in the dark},
+    author = {Carl Sagan},
+    isbn = {0-345-40946-9},
+    publisher = {Ballantine Books},
+    year = {1996},
+    title = {The demon-haunted world : science as a candle in the dark},
 }
 
 
 @phdthesis{ education:cavallo__technological_fluency,
     author = {Cavallo, David Paul},
-    note = {Supervisor-Papert, Seymour},
     title = {Technological fluency and the art of motorcycle maintenance: emergent design of learning environments (thailand)},
     year = {2000},
     publisher = {Massachusetts Institute of Technology},
@@ -36,16 +35,13 @@
 
 
 @book{  education:ivan_illich__deschooling_society,
-	author = {Illich, Ivan  },
-	citeulike-article-id = {494750},
+	author = {Illich, Ivan},
 	howpublished = {Paperback},
 	isbn = {0714508799},
-	keywords = {alexander, design, education, mathgamespatterns, patterns, radical, theory},
-	posted-at = {2006-02-07 02:12:35},
-	priority = {2},
-	publisher = {{Marion Boyars Publishers, Ltd.}},
+	publisher = {Marion Boyars Publishers, Ltd.},
 	title = {Deschooling Society},
-	url = {http://www.amazon.ca/exec/obidos/redirect?tag=citeulike09-20\&amp;path=ASIN/0714508799}
+        year = {1971},
+	url = {http://ournature.org/~novembre/illich/1970_deschooling.html}
 }
 
 
