--- a/the_bases.tex
+++ b/the_bases.tex
@@ -29,11 +29,11 @@ Constructionism is also a true pedagogy of autonomy, in a very Freirean way:
 \begin{quote}
     ...teaching is not transferring knowledge, but creating opportunities for their own
     production or its construction.
-\cite{education:paulo_freire__pedagogia_da_autonomia}
+    \cite{education:paulo_freire__pedagogia_da_autonomia}
 \end{quote}
 
 We can observe the deep connection of constructionism with computers and
-technology. But that is far from a technocentrist, where technology is used just
+technology. But that it is far from technocentrism, where technology is used just
 for the sake of using technology. That connection comes from the almost endless
 capacity of the computer to create simulations and concept of microworlds:
 
@@ -106,8 +106,7 @@ Thailand shows:
   The workshops were intended to:
     \begin{itemize}
 
-        \item provide powerful personal
-        xperiences of a different approach to learning,
+        \item provide powerful personal experiences of a different approach to learning,
 
         \item break pessimistic mindsets about people’s ability to learn,
 
