placed my name again

--- a/emergent_design.tex
+++ b/emergent_design.tex
@@ -24,8 +24,9 @@
 
 \title{An emergent participatory design framework for higher education}
 
-%\author{Eduardo Bellani \thanks{\htmladdnormallink{ebellani@gmail.com}
-%                                                  {mailto:ebellani@gmail.com}} } 
+\author{Eduardo Bellani \thanks{\htmladdnormallink{blog}{http://www.cnxs.com.br} --
+                                \htmladdnormallink{contact}
+                                                  {mailto:ebellani@gmail.com}} } 
 
 \address{
 %  Instituto de Informática -- Universidade Federal do Rio Grande do Sul
