--- a/emergent_design.tex
+++ b/emergent_design.tex
@@ -1,7 +1,8 @@
 \documentclass[a4paper, 12pt]{article}
 
+%this is for use in sbc
+%\usepackage{sbc-template}
 
-\usepackage{sbc-template}
 %better bibliography style control
 \usepackage{natbib}
 
@@ -27,21 +28,6 @@
 \author{Eduardo Bellani \thanks{\htmladdnormallink{blog}{http://www.cnxs.com.br} --
                                 \htmladdnormallink{contact}
                                                   {mailto:ebellani@gmail.com}} } 
-
-\address{
-%  Instituto de Informática -- Universidade Federal do Rio Grande do Sul
-%  (UFRGS)\\
-%  Caixa Postal 15.064 -- 91.501-970 -- Porto Alegre -- RS -- Brazil
-%\nextinstitute
-%  Department of Computer Science -- University of Durham\\
-%  Durham, U.K.
-%\nextinstitute
-%  Departamento de Sistemas e Computação\\
-%  Universidade Regional de Blumenal (FURB) -- Blumenau, SC -- Brazil
-%  \email{\{nedel,flavio\}@inf.ufrgs.br, R.Bordini@durham.ac.uk,
-%  jomi@inf.furb.br}
-}
-
 
 \begin{document} 
     \maketitle
