--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-The fundamental problem that I tackle in this article is putted by \cite{sagan_1996__candle_in_dark}  
+The fundamental problem that I tackle in this article is placed by \cite{sagan_1996__candle_in_dark}  
 very eloquently, so I'll quote him in full:
 
 \begin{quotation}
